fix: Allow dropdown items to span full width and scroll on mobile

--- a/packages/design-system/src/custom/_forms.scss
+++ b/packages/design-system/src/custom/_forms.scss
@@ -153,3 +153,7 @@ div.dropdown:has(.is-invalid) ~ .invalid-feedback,
 div.dropdown:has(.is-warning) ~ .warning-feedback {
   display: block;
 }
+
+.min-w-fit {
+  min-width: fit-content
+}
